--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -6,6 +6,11 @@
     padding: 0;
     margin: 0;
     justify-content: space-between;
+    z-index: 3;
+}
+
+.mobileLogo{
+    display: none;
 }
 
 .headerHastag{
@@ -27,4 +32,27 @@
 
 .offerHead img{
     margin-right:0.5rem ;
+}
+
+@media (max-width: 768px){
+    .desktopLogo{
+        display: none;
+    }
+    .mobileLogo{
+        display: block;
+    }
+
+    .headerHastag{
+        display: none;
+    }
+    .offerHead{
+        margin: auto;
+        /* margin-left: -1px; */
+        margin-left: 2rem;
+    }
+
+    .offerHead h4{
+        font-size: 12px;
+        text-align: left;
+    }
 }
