--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --borderRadius: 2px;
 
   /* Colors and Typography */
-
+  --white : #fff;
   --primary-color: #72d12a;
   --bg500: #e0e0e0;
   --bg600: grey;
