--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -30,7 +30,7 @@
   text-decoration: underline;
 }
 .leftBannerOffer{
-  color: white;
+  color: var(--white);
   position: absolute;
   left: 8rem;
   top: 16rem;
@@ -93,7 +93,7 @@
 }
 .productsGallery h2{
   font-size: 28px;
-  color: white;
+  color:  var(--white);
   text-align: left;
 }
 
@@ -116,7 +116,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid  var(--white);
   width: 100%;
   padding-bottom:4rem ;
 }
@@ -184,7 +184,6 @@
 
 @media (max-width: 768px){
   .main{
-    /* width: 100vw; */
     max-width: 100vw;
     height: 5307px;
     position: absolute;
@@ -193,10 +192,6 @@
     overflow: hidden;
   }
 
-
-  .main button:first-child{
-    background-color: #bbbbbb;
-  }
   .heroBanner{
     margin-top: 0.5rem;
   }
@@ -298,7 +293,7 @@
   .navProducts{
     display: block;
     position: absolute;
-    color: white;
+    color:  var(--white);
     top: 57rem;
     z-index: 5;
     text-align: left;
